# Vitals

./: .gitattributes  .gitignore  Makefile.am  README  README.md  amdgpu.js  autogen.sh  commandLineUtil.js  configure.ac  coreStatsItem.js  deploy.sh  drac_style.css  extension.js  files.js  freonItem.js  history.js  historyGraph.js  makeZip.sh  menuItem.js  menuItemLegacy.js  menuItemOld.js  metadata.json  nord_block.css  notifications.js  prefs.js  prefs.legacy.ui  prefs.ui  prefs40.ui  sensors.js  sensorsUtil.js  stylesheet.css  udisks2.js  utilities.js  values.js  vitalsItem.js  zip.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: build.yml  get_latest_tag.sh  get_next_tag.sh  main.yml  master.yml
Vitals@CoreCoding.com/: extension.js  prefs.js  stylesheet.css
Vitals@CoreCoding.com/locale/cs/LC_MESSAGES/: vitals.po
Vitals@CoreCoding.com/locale/fi_FI/LC_MESSAGES/: vitals.po
Vitals@CoreCoding.com/locale/fr/LC_MESSAGES/: vitals.po
Vitals@CoreCoding.com/locale/it/LC_MESSAGES/: vitals.po
Vitals@CoreCoding.com/locale/oc/LC_MESSAGES/: vitals.po
Vitals@CoreCoding.com/locale/pt/LC_MESSAGES/: vitals.mo
Vitals@CoreCoding.com/locale/pt_BR/LC_MESSAGES/: vitals.po
data/: .gitignore  Makefile.am  metadata.json.in  org.gnome.shell.extensions.sensors.gschema.xml.in
freon@UshakovVasilii_Github.yahoo.com/: aticonfigUtil.js  bumblebeeNvidiaUtil.js  commandLineUtil.js  convenience.js  extension.js  freonItem.js  hddtempUtil.js  metadata.json  nvidiaUtil.js  prefs.js  sensorsUtil.js  udisks2.js  utilities.js
freon@UshakovVasilii_Github.yahoo.com/locale/de/LC_MESSAGES/: freon.mo
freon@UshakovVasilii_Github.yahoo.com/locale/es_AR/LC_MESSAGES/: freon.mo
freon@UshakovVasilii_Github.yahoo.com/locale/pl/LC_MESSAGES/: freon.mo
freon@UshakovVasilii_Github.yahoo.com/locale/ru/LC_MESSAGES/: freon.mo
freon@UshakovVasilii_Github.yahoo.com/locale/uk_UA/LC_MESSAGES/: freon.mo
freon@UshakovVasilii_Github.yahoo.com/locale/zh_CN/LC_MESSAGES/: freon.mo
freon@UshakovVasilii_Github.yahoo.com/po/: es_AR.po  es_ES.po  fr.po  freon.pot  pl.po  pt_BR.po  ru.po  ru_RU.pot  uk_UA.po  zh_CN.po  zh_TW.po
freon@UshakovVasilii_Github.yahoo.com/schemas/: gschemas.compiled  org.gnome.shell.extensions.sensors.gschema.xml
helpers/: README.md  convenience.js  file.js  otherPolyfills.js  polyfills.js  promise.js  subprocess.js
icons/flags/: flag-icons.LICENSE
locale/: UpdateString.sh  vitals.pot
locale/ar/LC_MESSAGES/: vitals.mo  vitals.po
locale/be/: be.po
locale/be/LC_MESSAGES/: vitals.mo
locale/ca/LC_MESSAGES/: vitals.mo  vitals.po
locale/cs/LC_MESSAGES/: clipboard-indicator.mo  clipboard-indicator.po  vitals.mo  vitals.po
locale/de/: vitals.po
locale/de/LC_MESSAGES/: clipboard-indicator.po  vitals.mo  vitals.po
locale/el/LC_MESSAGES/: clipboard-indicator.mo  vitals.po
locale/en_US/LC_MESSAGES/: vitals.mo  vitals.po
locale/es/LC_MESSAGES/: vitals.mo  vitals.po
locale/es_ES/LC_MESSAGES/: clipboard-indicator.mo  clipboard-indicator.po  freon.mo
locale/fi/LC_MESSAGES/: clipboard-indicator.mo  clipboard-indicator.po
locale/fi_FI/LC_MESSAGES/: vitals.mo  vitals.po
locale/fr/LC_MESSAGES/: freon.mo  vitals.mo  vitals.po
locale/fr_FR/LC_MESSAGES/: vitals.mo  vitals.po
locale/it/LC_MESSAGES/: clipboard-indicator.mo  clipboard-indicator.po  vitals.mo  vitals.po
locale/ka/LC_MESSAGES/: vitals.mo  vitals.po
locale/my_MM/LC_MESSAGES/: vitals.mo  vitals.po
locale/nl/LC_MESSAGES/: vitals.mo  vitals.po
locale/oc/LC_MESSAGES/: vitals.mo  vitals.oc  vitals.po
locale/pl/LC_MESSAGES/: vitals.mo  vitals.po
locale/pt/LC_MESSAGES/: vitals.mo  vitals.po
locale/pt_BR/LC_MESSAGES/: clipboard-indicator.mo  clipboard-indicator.po  freon.mo  vitals.mo  vitals.po
locale/ru/: README.md
locale/ru/LC_MESSAGES/: clipboard-indicator.po  vitals.mo  vitals.po
locale/sk/LC_MESSAGES/: vitals.mo  vitals.po
locale/tr/LC_MESSAGES/: clipboard-indicator.mo  clipboard-indicator.po  vitals.mo  vitals.po
locale/uk/LC_MESSAGES/: vitals.mo  vitals.po
locale/uk_UA/LC_MESSAGES/: freon.mo
locale/zh_CN/LC_MESSAGES/: clipboard-indicator.mo  vitals.mo  vitals.po
locale/zh_TW/LC_MESSAGES/: freon.mo  vitals.mo  vitals.po
po/: .gitignore  LINGUAS  POTFILES.in  de.po  es.po  es_AR.po  es_ES.po  fr.po  gnome-shell-extension-sensors.pot  it.po  messages.pot  pt_BR.po  ru.po  tr.po  vitals.pot  zh_CN.mo  zh_CN.po  zh_TW.po
schemas/: gschemas.compiled  org.gnome.shell.extensions.cpu-temperature.gschema.xml  org.gnome.shell.extensions.sensors.gschema.xml  org.gnome.shell.extensions.status-area-horizontal-spacing.gschema.xml  org.gnome.shell.extensions.vitals.gschema.xml  prefs.ui
src/: Makefile.am  convenience.js  extension.js  prefs.js  utilities.js
