# Change these to modify how installation is performed
topextensiondir = $(datadir)/gnome-shell/extensions

uuid = temperature@xtranophilist

extensiondir = $(topextensiondir)/$(uuid)

dist_extension_DATA = extension.js convenience.js prefs.js utilities.js

nodist_extension_DATA = $(EXTRA_EXTENSION)
